# prjct_hlpr

./: .gitignore  README.md  new_book.csv  notes_save.csv  pyproject.toml  requirements.txt  setup.py
console_assistant.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/: classes.py  format.py  main.py  notes.py  styles.py
src/decorators/: input_error.py
